# NexusWorksFreelance

./: .env.example  .env.production.example  README-DATABASE-FIXES.md  README-DJANGO-INTEGRATION.md  README-GITHUB-OAUTH.md  README-Neon-SETUP.md  README-SUPABASE-SETUP.md  README.md  TESTING.md  hardhat.config.js  jest.config.js  jest.setup.js  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  playwright.config.ts  run-all-tests.sh  test-auth-integration.js  tsconfig.json
app/: globals.css  (+2 more)
django-backend/: BACKGROUND_TASKS_IMPLEMENTATION.md  README.md  fix_database.py  pyproject.toml  requirements-prod.txt  run_tests.py  test_ai_api.py  test_analysis_endpoints.py  test_api_skill_updates.py  test_background_tasks.py  test_business_logic_only.py  test_console_api_direct.py  test_console_endpoints.py  test_github_client.py  test_github_simple.py  test_intelligent_matching.py  test_matching_simple.py  test_payment_gateway_complete.py  test_payment_gateway_integration.py  test_payment_gateway_simple.py  test_project_analysis.py  test_project_analysis_api.py  test_project_analysis_simple.py  test_project_console.py  test_project_console_basic.py  test_project_console_simple.py  test_proposal_system_only.py  test_rag_basic.py  test_rag_pipeline.py  test_repository_analyzer.py  test_resume_api.py  test_resume_parsing.py  test_resume_simple.py  test_senior_developer_proposal.py  test_senior_developer_simple.py  test_skill_updates.py  test_skill_updates_simple.py  test_task_approval_basic.py  test_task_approval_simple.py  test_task_approval_workflow.py  (+7 more)
(+350 files in other folders)
